# motoman

motoman_driver/: CMakeLists.txt  package.xml
motoman_driver/MotoPlus/: MotionServer.c  SimpleMessage.h
motoman_driver/launch/: motion_streaming_interface.launch  robot_interface_streaming.launch  service_simulator.launch
motoman_driver/lua/motoman_gripper_relay/: CMakeLists.txt  config.yaml  package.xml  start.launch  start_gripper_relay.launch  wsgClient.lua
motoman_driver/src/: emergencs_stop_service_node.cpp  joint_streaming_node.cpp  joint_trajectory_streamer.cpp  motion_ctrl.cpp  robot_state_node.cpp
motoman_msgs/: CMakeLists.txt  package.xml
motoman_msgs/action/: StartJob.action
motoman_msgs/msg/: JobPosData.msg  JobStatus.msg  MovCtrlData.msg  OperationMode.msg  PlayStatus.msg  UserVarPrimitive.msg
motoman_msgs/srv/: CancelError.srv  DeleteJob.srv  GetControllerReady.srv  GetCurJob.srv  GetJobDate.srv  GetMasterJob.srv  GetMode.srv  GetPlayStatus.srv  GetServoPower.srv  GetStatus.srv  GetUserVars.srv  Hold.srv  ListJobs.srv  PutUserVars.srv  ReadIO.srv  SetAlarm.srv  SetCurJob.srv  SetMasterJob.srv  SetServoPower.srv  SkillEnd.srv  SkillRead.srv  StartJob.srv  Status.srv  WaitForJobEnd.srv  WriteIO.srv
motoman_sda10d_support/: CMakeLists.txt  package.xml
motoman_sda10d_support/config/: joint_names_sda10d.yaml  sda10d_motion_interface.yaml
motoman_sda10d_support/launch/: debugInfos  load_sda10d.launch  robot_interface_streaming_sda10d.launch  robot_state_visualize_sda10d.launch  rosconfig.conf
motoman_sda10d_support/test/: launch_test.xml  sda10d_test.xacro
(+47 files in other folders)
